--- a/facebook data scrubber.ipynb
+++ b/facebook data scrubber.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +46,13 @@
     "        for lines in content:\n",
     "            post_content.append(lines.text)\n",
     "        \n",
-    "        #post_content = ' '.join(post_content)\n",
-    "        #print(post_content)\n",
-    "        data= {'post': post_content}\n",
+    "        post_content = ' '.join(post_content)\n",
+    "        print(post_content)\n",
+    "        post = [post_content]\n",
+    "        \n",
+    "        data= {'post': post}\n",
     "        df2 = pd.DataFrame(data)\n",
-    "        df2.to_csv(\"file1.csv\", mode='a', header=False)\n",
+    "        df2.to_csv(\"file1.csv\", mode='a', encoding='utf-8-sig', header=False)\n",
     "        \n",
     "        return post_content\n",
     "\n",
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,22 +78,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bot.post_ID = \"3722333464528359\""
+    "bot.post_ID = \"3720577414697559\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#তেজপাতা  #chocolateday  #part3  -কিটক্যাট কেনার টাকা আছে। বাস ভাড়া বাঁচিয়ে ফেলে কাজের কার করেছি। এই না হলে আমি যেমন ভাবা তেমন কাজ। যাই ওর বাড়ি গিয়ে এটা দিয়ে বলি যে আমি ওকে..বলে দেবো? নাকি একটু অন্য ভাবে বলবো? ধুর আগে যাই তো গিয়ে দেখবো।   - গাধাটা আজকে আসবে হয়তো। ইন্টারভিউ- এর চাপে ভুলে গিয়েছিল বোধহয়। আসুক একবার খুব ঝগড়া করবো। 😡 কিন্ত...  আজকে যদি বলে ও আমি কি সোজা হ্যাঁ বলে দেবো? ধুর আবার এক চিন্তা.. দরজায় কে এলো? আজকে আসলো তার মানে শেষমেশ। তুমি?   - কপাল আমার বরাবরই খারাপ আমার। ভাবলাম আজকে ওকে মনের কথাটা বলে দেবো, কিন্ত ও তো অন্য কাউকে ভালোবাসে.. বাড়ি যাই।   আগের পর্বের লিংক - https://www.facebook.com/1619826468106008/posts/3718011911620776/  গল্প- ঋজু আঁকা - লুৎফা It is released now..  \"Preme Porleo Porte Pari\" in the season of love. ❤️❤️   Watch the full video at - https://youtu.be/-dQXdiTa2DY 14th February - Valentine's day.. ❤️ ভালোবাসার দিনে ভালোবাসার অন্য রকম উজ্জাপন।  আমরা পৌঁছে গিয়েছিলাম নৈহাতির মুক্তধারা অনাথ আশ্রমে। ইচ্ছে ছিলো একটা অন্য রকম ভালোবাসার দিবস পালন করার এবং আমরা সফল।   এই আশ্রমে থাকে প্রায় 35 জন মেয়ে যারা ভীষন গুণী। ওদের করা একটি নৃত্যের ছবি থাকলো।এই মিষ্টি মিষ্টি মেয়েগুলো যেমন পড়াশুনায় ভালো তেমনি আবৃতি এবং নৃত্যেও। আমরা ওদের হাতে কিছু প্রয়োজনিও দ্রব্য যেমন মাস্ক, খাতা, পেন, পেন্সিল, ফল ইত্যাদি তুলে দিয়েছি এবং ওদের সাথে একইসাথে খুব আনন্দের সাথে দুপুরের আহার করেছি। সারাদিনটা অন্য বাকি দিনের চেয়ে সুন্দর কেটেছে।  আপনারাও একদিন ঘুরে আসতে পারেন। ভালোবাসার সাথে কয়েকটা মানুষকে হাসি উপহার দেওয়া গেলে জীবনে আর কিছু লাগেনা বোধহয়।   Bang Bang Bangalore (B3 🤘)  এবং বাকি যারা এগিয়ে এসেছিলেন এবং পাশে থেকে সাহায্য করেছেন তাদের আন্তরিক ভাবে ধন্যবাদ এবং আমরা ঋণী থাকবো আপনাদের কাছে। So here comes the TEASER of #Preme_Porleo_Porte_Pari ❤️ Releasing on 19th feb on Below You-Tube Channel ☺️ . Channel Link : https://www.youtube.com/c/ArchismanChowdhury/ Teaser Link : https://youtu.be/g-Gks9p4Wd8 . New Independent Music ☺️  Lyrics : Somraj Srd Das Composition : Archisman Chowdhury  Vocal : Abritte Talukdar  & Archisman Chowdhury  Music arrangement : Vivek Praveen Videography and editing : Sujit Dutta  Stay tuned..  Witness the season of love with #Preme_Porleo_Porte_Pari ❤️.\n"
+     ]
+    }
+   ],
    "source": [
-    "d = bot.post_content()\n",
-    "d2 = ' '.join(d)\n",
-    "print(d2)\n"
+    "d = bot.post_content()"
    ]
   },
   {
